[gd_scene load_steps=7 format=3 uid="uid://d1qw1qkcp7vrc"]

[ext_resource type="Script" path="res://scenes/enemy.gd" id="1_1xebv"]
[ext_resource type="Texture2D" uid="uid://b6ioomlcds6ej" path="res://visuals/sprites/enemy.aseprite" id="2_0mkae"]
[ext_resource type="Script" path="res://scripts/hittable.gd" id="3_y4blm"]
[ext_resource type="Script" path="res://scripts/health.gd" id="4_3b4wc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1gqh"]
size = Vector2(10, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_gxfhl"]
radius = 40.0

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("patrol_points")]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_1xebv")
patrol_points = [NodePath("Marker2D"), NodePath("Marker2D2")]

[node name="Hittable" type="Node" parent="."]
script = ExtResource("3_y4blm")

[node name="HealthComponent" type="Node" parent="Hittable"]
script = ExtResource("4_3b4wc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0mkae")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_v1gqh")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_gxfhl")

[node name="EdgeRay" type="RayCast2D" parent="."]
position = Vector2(5, 8)
target_position = Vector2(0, 16)

[node name="WallRay" type="RayCast2D" parent="."]
position = Vector2(5, 7)
target_position = Vector2(16, 0)

[node name="PatrolTimer" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
top_level = true
position = Vector2(24, 128)

[node name="Marker2D2" type="Marker2D" parent="."]
top_level = true
position = Vector2(296, 128)
